# NEDI

./: .gitignore  CMakeLists.txt  CMakePresets.json  image_dataset_license.txt
.quail/: cmake.txt  quail.txt  shared.txt
.quail/cmd/cmake/: refresh.bat
.quail/cmd/execute/: gpu_debug.ps1  with_resources.ps1
.quail/module/: downscale.txt  nedi.txt
cmake/: properties.cmake
dependencies/: CMakeLists.txt
project/: .typos.toml
project/downscale_nn_lt/: CMakeLists.txt
project/downscale_nn_lt/inc/: blue_impl.hpp  image.hpp
project/downscale_nn_lt/src/: main.cpp
project/nedi/: CMakeLists.txt
project/nedi/inc/: blue_impl.hpp  cuda_impl.hpp  eigen_impl.hpp  framework.hpp  image.hpp
project/nedi/src/: main.cpp  main.cu  source.cpp
